Allow including timestamp in logs.
